# api-kit

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  deny.toml
.github/workflows/: rust.yml
api-kit/: Cargo.toml
api-kit/src/: auth.rs  error.rs  lib.rs  metadata.rs  url.rs
api-kit/src/auth/: basic.rs  bearer.rs
