[workspace]
resolver = "2"
members = ["api-kit"]

[workspace.lints.rust]
unused_crate_dependencies = "warn"

[workspace.lints.clippy]
pedantic = "warn"
# See https://users.rust-lang.org/t/cargo-toml-lint-config-allow-is-not-respected-possible-bug/102924/5
nursery = { level = "warn", priority = -1 }

as_underscore = "warn"
clone_on_ref_ptr = "warn"
format_push_string = "warn"
mod_module_files = "warn"
str_to_string = "warn"

multiple_unsafe_ops_per_block = "deny"
undocumented_unsafe_blocks = "deny"

module_name_repetitions = "allow"
missing_errors_doc = "allow"            # Change to "warn" later
missing_panics_doc = "allow"            # Change to "warn" later
