[package]
name = "api-kit"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lints]
workspace = true

[features]
default = []

# Authentication schemes
basic-auth = ["base64"]

[dependencies]
base64 = { version = "0.22", optional = true }
bytes = "1"
http = "1"
serde = "1"
serde_json = "1"
serde_urlencoded = "0.7"
thiserror = "1"
percent-encoding = "2.3.1"
itoa = "1.0.11"
ryu = "1.0.18"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
