[package]
name = "api-kit"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lints]
workspace = true

[features]
default = []

# Body types
json = ["dep:serde_json"]

# Authentication schemes
basic-auth = ["dep:base64"]

[dependencies]
base64 = { version = "0.22", optional = true }
bytes = "1"
displaydoc = "0.2.5"
http = "1"
itoa = "1.0.11"
percent-encoding = "2.3.1"
ryu = "1.0.18"
serde = "1"
serde_json = { version = "1", optional = true }
serde_urlencoded = "0.7"
thiserror = "2"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
